1A/S6/a/tps/.svn/pristine/a1/a1becb1fbff0a085b529be444e38ebf3f67e9903.svn-base
./allumettes/Arbitre.java:155: error: unclosed string literal
                System.out.print("\nErreur : Vous devez donner un entier.
                                 ^
./allumettes/Arbitre.java:159: error: ';' expected
        } while (choice < 1 || choice > this.NOMBRE_OPTIONS));
                                                            ^
2 errors
